client/src/pages/Views.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.views-container{
     background: #fff2d7;
}
.top{
    background: #232020;
    height: 60vh;
     border-radius: 1.2rem;
}
.imgg-top{
    display: flex;
    justify-content: space-evenly;
}

.first{
    margin: 5.6rem 10px -10px 25px;
    width: 20%;
    height: 18.75rem;
}
.mid{
    width: 10%;
    height: 11rem;
    margin-top: 3.75rem;
    border: .3rem solid; 
}
.end{
    height: 22.75rem;
    width: 45%;
}
.top-header{
    text-align: center;
    font-style: italic;
    font-size: 2.5em;
    margin-top: -6.25rem;
    color: #fff2d7;
  font-family: "Dancing Script", cursive;
  font-optical-sizing: auto;
}
section{
    background: #fff2d7;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 3fr 1fr;
        margin-top: -1.7rem;
        margin-bottom: 1.8rem;
        height: 60vh;
}
section p, .article-p{
    line-height: 1.6;
    font-size: 1rem;
    text-align: justify;
    font-family: "Dancing Script", cursive;
  font-optical-sizing: auto;
}
.sec-img{
    height: 25rem;
}
.logs{
    display: flex;
    align-items: end;
    justify-content: end;
}
.register{
    font-family: "Lobster Two", sans-serif;
  font-weight: 400;
  font-style: italic;
    padding: .8rem 2.2rem;
    margin: .8rem;
    border-radius: 12px;
     cursor: pointer;
   background: #72011f;
}

.logs a{
    color: #fff;
    text-decoration: none;
}
.left{
    padding: 30px;
}
.left-details{
    margin: 1.25rem auto;
    padding-top: 1.3rem;
    padding-left: 8.75rem;
    padding-right: 25px;
    color: #72011f;
    font-weight: 600;
}
article{
    background: #232020;
    color: #fff2d7;
    display: grid;
    padding: 10px;
    height: 90vh;
}
.article-img{
    display: flex;
    justify-content: space-between;
}
.article-left{
    padding: 1.2rem;

}
.bee{
    width: 250px;
    border-radius: 22px;
    margin-top: -80px;   
}
.cee{
    height: 380px;
    margin-top: -150px;
    border-radius: 22px;
}
.icons{
      width: 100px;
    height: 100px;
}
.article-bottom{
    display: grid;
    grid-template-columns: 2fr 1fr;
    padding: 15px;
    margin: 5px auto;
}
 
.art-p{
    width: 450px;
}
.messy h1{
    font-size: 25px;
    width: 500px;
    display: inline-block;
   font-family: "Agu Display", serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: oblique;
  font-variation-settings:
    "MORF" 12;
    
}
.article-p{
    color: #fff2d7;
    font-weight: 700 ;
    font-size: 10px ;

}
footer{
    border: 2px solid;
    padding: 5px;
}
footer img{
    margin-top: -48px;
}
.foot-deets{
    display: flex;
    gap: 10px;
    justify-content: space-evenly;
    height: 32vh;
}
.foot-img{
    transform: rotate(-90deg);
    width: 250px;
    height: 330px;
    margin-top: 10px;
}
.foot-img-b{
    width: 300px;
    height: 350px;
}
.footer-h{
    display: inline-block;
    font-family: "Agu Display", serif;
  font-optical-sizing: auto;
  font-weight: 500;
  color: #72011f;
  font-size: 33px;
  font-style: oblique;
  font-variation-settings:
    "MORF" 12;

}
.copyright {
    background: #232020;
    color: rgba(255, 242, 215, 0.5);
    text-align: center;
    padding: 20px;
    font-family: 'Raleway', sans-serif;
    font-size: 0.85rem;
    letter-spacing: 1px;
}

.copyright span {
    color: #72011f;
    font-weight: 600;
}
@media (max-width : 468px) {
    .top{
        height: 30vh;
    }
    .mid{
        opacity: 0;
    }
    .first{
       width: 40%;
       margin: auto;
       height: auto;
    }.end{
         height: auto;
    }
    .top-header{
        font-size: 1.5em;
         margin-top: -2.5em;
         color: #fff2d7;
    }
    section{
        display: block;
        height: auto;
    }
    .left-details,.right{
    margin: 2rem auto;
    padding-top: .5rem;
    padding-left: 2rem;
    padding-right: .5rem;

.sec-img{
   max-width: 100%;
   height: auto;
}.right{
    margin-top: -3rem;
}
}article{
    margin-top: -2.3rem;
    height: auto;
}.article-left{
    margin-top: 4.5rem;
    /* margin-left: -.5rem; */

}.bee{
    max-width: 100%;
    height: auto;
    /* padding: .2rem; */
}.messy h1{
    font-size: 1rem;
    width: 100%;
}.icons{
    opacity: 0;
}.article-bottom{
    display: block;
}.art-p{
    width: auto;
}.cee{
    height:28rem;
    margin: .8rem ;
    border-radius: 22px;
    width: auto;
}
footer{
    display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   gap: 20px;
    padding: 1.2rem;
    /* height: 30vh; */
    border: none;
}
.foot-img{
    opacity: 0;
    width: 0;
}.footer-h{
    font-size: 1.2rem;
    width: 50%;
}.foot-img-b{
    width: 55%;
    height: auto;
    margin-top: -1.2rem;
}
}
@media (min-width:469px) and (max-width:1019px) {
    .top{
        height: 40vh;
    }
    .mid{
        opacity: 0;
    }.first{
        width: 30%;
        height: 20rem;
    }.end{
        height: 24rem;
        width: 45%;
    }
    .top-header{
        font-size: 2rem;
       margin-top: -3rem;
        
    }section{
        display: block;
        height: auto;
    }.left-details{
        padding-left: 3rem;
    }
    .sec-img{
        height: auto;
        max-width: 100%;
    }.art-p{
        width: auto;
        padding: .5rem;
        margin-top: 2.5rem;
    }.article-p{
         font-size: .7rem;
    }.messy h1{
        font-size: 1.2rem;
        width: 100%;
    }.cee{
    height: 25rem;
    border-radius: 22px;
    width: auto;
    margin-top: .5rem;
    }.bee{
        width: 20rem;
        margin-top: .5rem;
    }
     .foot-img{
    opacity: 0;
    width: 0;
    }.foot-img-b{
    width: 60%;
    height: auto;
     }.footer{
    height:auto;
     }
}


@media (min-width: 1024px) {
    .top { height: 55vh; }
    .first { margin: 2rem 10px -10px 25px; 
        width: 20%; height: 18.75rem; }
    .mid { width: 10%; height: 11rem; margin-top: 2.75rem; border: .3rem solid; opacity: 1; }
    .end { height: 22rem; width: 40%; }
    .top-header { font-size: 2.5rem; margin-top: -5rem; }
    section { display: grid; grid-template-columns: 3fr 1fr; gap: 1.5rem; height: auto; margin-bottom: 1rem; }
    .left { padding: 2rem; }
    .left-details { padding-left: 6rem; }
    .left-details p { font-size: 1.3rem; }
    .sec-img { height: 35rem; width: 100%; }
    article { height: auto; margin-top: -2rem; }
    .article-left { margin-top: 3rem; }
    .bee { width: 18rem; height: auto; }
    .cee { width: 18rem; height: 28rem; margin-top: -8rem; }
    .icons { opacity: 1; width: 100px; height: 100px; }
    .article-bottom { display: grid; grid-template-columns: 2fr 1fr; padding: 1rem; }
    .messy h1 { font-size: 2rem; width: 35rem; }
    .art-p { width: auto; margin-top: 2rem; }
    .art-p p { font-size: 1.2rem; }
    footer { height: auto; padding: 1rem; }
    .foot-deets { height: 35vh; justify-content: space-evenly; }
    .foot-img { opacity: 1; transform: rotate(-90deg); width: 15rem; height: 20rem; }
    .foot-img-b { width: 18rem; height: 23rem; margin-top: -3rem; }
    .footer-h { font-size: 2.5rem; margin-left: 2rem; }
}

